--- a/nodefs/package.json
+++ b/nodefs/package.json
@@ -9,11 +9,15 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "koa": "node server/app development"
   },
   "dependencies": {
+    "element-ui": "^2.5.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
