--- a/nodefs/package.json
+++ b/nodefs/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "koa": "^2.7.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -51,6 +52,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "xml2js": "^0.4.19",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
